pgrx-unit-tests/tests/compile-fail/u32.rs
use pgrx::prelude::*;

fn main() {}

#[pg_extern]
pub fn whatever(a: u32) -> u32 {
    a
}
